<resources>
    <string name="app_name">MedSwap</string>
    <string name="this_is_a_logo">This is a logo</string>
    <string name="hello_there_nwelcome_back">Hello There,\nWelcome Back</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="go">GO</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="welcome">Welcome</string>
    <string name="signup_to_start_you_new_journey">SignUp to start you new Journey♥</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_an_account_login">ALREADY HAVE AN ACCOUNT? LOGIN</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="write">Write</string>
    <string name="profile">Profile</string>
    <string name="scan">Scan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="search_medicine">Search Medicine</string>
    <string name="scan_amp_learn"><![CDATA[Scan & Learn]]></string>
    <string name="elevate_your_health_iq">Elevate Your Health IQ</string>
    <string name="todo">TODO</string>
    <string name="recent_search">Recent Search</string>
    <string name="say_goodbye_to_high_prices_hello_to_health">Say goodbye to High Prices, Hello to Health</string>
    <string name="making_healthcare_affordable_accessible_and_convenient_medswap_does_it_all">Making healthcare affordable, accessible, and convenient – MedSwap does it all</string>
</resources>