<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FBFDFC"
    tools:context=".SIGNUP.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/medswap_logo"
            android:contentDescription="@string/this_is_a_logo"/>

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="@dimen/_40sdp"
            android:fontFamily="@font/fira_sans_extra_condensed_extrabold"/>

        <TextView
            android:id="@+id/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome"
            android:fontFamily="@font/antic"
            android:text="@string/signup_to_start_you_new_journey"
            android:textSize="@dimen/_18sdp" />

        <LinearLayout
            android:layout_below="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progress_bar_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="#ff4500"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:hint="@string/full_name"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullname_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:hint="@string/username"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textAutoComplete"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:hint="@string/email"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:hint="@string/phone_number"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumber_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/go_button_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/go"
                android:background="@color/black"
                android:backgroundTint="@color/black"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/back_signup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/already_have_an_account_login"
                android:layout_margin="@dimen/_5sdp"
                android:fontFamily="@font/antic"
                android:layout_gravity="center"
                android:textSize="@dimen/_10sdp"
                android:background="#00000000"
                android:backgroundTint="@color/black"
                android:textStyle="bold"
                android:elevation="0dp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="#000"/>

        </LinearLayout>

    </RelativeLayout>



</ScrollView>