<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/background_splash_screen"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_150sdp"
            android:paddingTop="@dimen/_20sdp"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/medswap_logo"
            android:contentDescription="@string/this_is_a_logo"/>

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:paddingStart="@dimen/_20sdp"
            android:layout_height="wrap_content"
            android:text="@string/hello_there_nwelcome_back"
            android:textColor="@color/black"
            android:textSize="@dimen/_40sdp"
            android:layout_below="@+id/logo"
            android:fontFamily="@font/fira_sans_extra_condensed_extrabold"/>

        <TextView
            android:id="@+id/signin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/antic"
            android:layout_below="@+id/heading"
            android:paddingStart="@dimen/_20sdp"
            android:text="@string/sign_in_to_continue"
            android:textSize="@dimen/_18sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_20sdp"
            android:layout_below="@id/signin_text"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progress_bar_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="#ff4500"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:hint="@string/email"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/go"
                android:background="@color/light_orange"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/button_signup"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/new_user_sign_up"
                android:layout_margin="@dimen/_5sdp"
                android:fontFamily="@font/antic"
                android:layout_gravity="end"
                android:textSize="@dimen/_12sdp"
                android:background="#00000000"
                android:backgroundTint="@color/black"
                android:textStyle="bold"
                android:elevation="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="#000"/>

            <Button
                android:id="@+id/guest_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/continue_as_guest"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/antic"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:background="#00000000"
                android:backgroundTint="@color/black"
                android:elevation="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:textColor="#000"/>

        </LinearLayout>

    </RelativeLayout>



</ScrollView>